[project]
name = "python-marimo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "marimo[lsp,recommended]>=0.11.31",
    "mypy>=1.15.0",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.24",
    "statsmodels>=0.14.4",
]

[tool.marimo.ai.open_ai]
api_key = "ollama" # This is not used, but required
model = "llama3.2" # or another model from `ollama ls`
base_url = "http://127.0.0.1:11434/v1"
